@@ -271,6 +271,11 @@ hextorio-base-trade-prod-gleba=[planet=gleba] Trade Productivity
 hextorio-base-trade-prod-aquilo=[planet=aquilo] Trade Productivity
 hextorio-increment-trade-quality=Increment Trade Quality
 hextorio-default-trade-quality=Default Trade Quality
+hextorio-trade-batching-threshold=Trade Batching Threshold
+hextorio-trade-collection-batch-size=Trade Collection Batch Size
+hextorio-trade-filtering-batch-size=Trade Filtering Batch Size
+hextorio-trade-sorting-batch-size=Trade Sorting Batch Size
+hextorio-hex-pool-size=Hex Pool Size
 hextorio-item-buff-cost-scale=Item Buff Cost Scale
 hextorio-item-buff-cost-base=Item Buff Cost Base
 hextorio-title-screen-music=Title Screen Music
@@ -408,6 +413,11 @@ hextorio-base-trade-prod-gleba=Trade productivity modifier on [planet=gleba].
 hextorio-base-trade-prod-aquilo=Trade productivity modifier on [planet=aquilo].
 hextorio-increment-trade-quality=Upon upgrading a hex core's quality, automatically set the upper bound of each trade's qualities to match the hex core's quality.
 hextorio-default-trade-quality=Upon claiming a hex core, the quality bounds for each trade are set to this range of values. All quality bounds are [color=green]configurable[.color] regardless of this setting's value.
+hextorio-trade-batching-threshold=When the number of trades on selected planets exceeds this threshold, the trade overview will show progress bars and process trades in batches across multiple ticks to prevent lag. Reduce if the trade overview freezes the game upon changing filters.
+hextorio-trade-collection-batch-size=Controls how many trades are collected from the selected planets per tick when loading the trade overview. Reduce if UPS drops while this progress bar is updating.
+hextorio-trade-filtering-batch-size=Controls how many trades are filtered per tick when loading the trade overview. Reduce if UPS drops while this progress bar is updating.
+hextorio-trade-sorting-batch-size=Controls how many trades are checked per tick when determining which trades to show at the top of the trade overview. Reduce if UPS drops while this progress bar is updating.
+hextorio-hex-pool-size=Adjust the hex pool size. Reduce to potentially improve UPS on large saves.
 hextorio-item-buff-cost-scale=The multiplier of the item's value that is used as the cost for unlocking that item's buffs in the catalog.
 hextorio-item-buff-cost-base=The base of exponentiation used to scale the value beyond the unlock cost to obtain the enhancement cost of an item's buffs.\n\nSmall changes to this number from the default value strongly affects the balancing of the game.
 hextorio-trade-flying-text=Whether to emit flying text for a trade that just completed.
@@ -656,15 +666,6 @@ empty-character-inventories=Empty your ammo, trash, and main inventories to tele
 empty-vehicle-inventories=Empty your vehicle's trunk, ammo, fuel, and trash inventories to teleport to another planet.
 no-item-in-hand=You have no item in your hand.
 item-rank-too-low=That item is not a high enough rank for this.
-current-hex-pool-size=Current hex pool size: __1__
-current-trade-batching-threshold=Current trade batching threshold: __1__
-set-trade-batching-threshold=Trade batching threshold set to: __1__
-current-trade-collection-batch-size=Current trade collection batch size: __1__
-set-trade-collection-batch-size=Trade collection batch size set to: __1__
-current-trade-filtering-batch-size=Current trade filtering batch size: __1__
-set-trade-filtering-batch-size=Trade filtering batch size set to: __1__
-current-trade-sorting-batch-size=Current trade sorting batch size: __1__
-set-trade-sorting-batch-size=Trade sorting batch size set to: __1__
 invalid-quality-selected=[color=red]The value you selected is not a quality. Find qualities in the "Unsorted" category.[.color]
 quality-bounds-adjusted=[color=yellow]The selected quality bounds were adjusted based on either currently unlocked qualities or the hex core's current quality.[.color]
 hexports-not-unlocked=Hexports have not yet been unlocked. They are unlocked as a quest reward!
@@ -702,11 +703,6 @@ tp-to-ship=Used in debugging, teleports you up to the first found space platform
 chart=Reveal a planet's chunks within a range from spawn.
 spawn-ship=Spawn a spaceship above Nauvis preloaded with materials to build it.
 skip-flight=Force the current spaceship that you're on to skip to its destination.
-hex-pool-size=Adjust the hex pool size or get its current setting. Reduce to potentially improve UPS on large saves.
-trade-batching-threshold=Adjust the trade batching threshold or get its current setting. When the number of trades on selected planets exceeds this threshold, the trade overview will show progress bars and process trades in batches across multiple ticks to prevent lag. Lower this value if the trade overview freezes the game upon changing filters.
-trade-collection-batch-size=Adjust the trade collection batch size or get its current setting. This controls how many trades are collected from the selected planets per tick when loading the trades. Lower this value if the trade overview causes UPS to drop while progress bars.
-trade-filtering-batch-size=Adjust the trade filtering batch size or get its current setting. This controls how many trades are filtered per tick when loading the trades. Lower this value if the trade overview causes UPS to drop.
-trade-sorting-batch-size=Adjust the trade sorting batch size or get its current setting. This controls how many trades are checked per tick when determining which trades to show at the top. Lower this value if the trade overview causes UPS to drop.
 add-coins=Add coins to your inventory.
 summon=Summon any entity and any number of them at your current character position.
 tp-to-edge=Teleport to the edge of the planet you're on, where you find dungeons.
